--- a/package.json
+++ b/package.json
@@ -13,8 +13,12 @@
   "author": "Javier Provecho Fernández",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.13.3",
+    "cookie-parser": "^1.3.5",
     "express": "^4.13.3",
+    "express-session": "^1.11.3",
     "passport": "^0.3.0",
-    "passport-eveonline": "^0.1.1"
+    "passport-eveonline": "^0.1.1",
+    "serve-static": "^1.10.0"
   }
 }
